fix title wrapping

--- a/src/renderer/scss/component/_file-list.scss
+++ b/src/renderer/scss/component/_file-list.scss
@@ -59,6 +59,7 @@
 
 .file-tile__title {
   font-size: 1.1em;
+  word-break: break-word;
 }
 
 .file-tile__uri {
